--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,16 @@
 <mat-card class="example-card">
     <div class="text-style-2">
-      <h1 class="text-style-1" style="color: orangered;">ॐ</h1>
+      <h1 style="color: orangered;">ॐ</h1>
     </div>
       <mat-card-content style="text-align: center;">
-          <p class="text-style-1" style="color: #0054ad;margin-bottom: 0px;">S/o Smt Radha and Sri Kanthraj</p> <br>
-          <h1 class="emboss" style="margin-top: 0px; color:#ff86cb">.・❀・.</h1> <br>
-          <h1 class="emboss" style="margin-top: -10px;">Darshan K</h1><br>
-          <h1 class="emboss">&</h1><br>
-          <h1 class="emboss" style="margin-bottom: 0px;">Mithali S</h1><br>
-          <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">・. ❀ .・</h1><br>
-          <p class="text-style-1" style="color: #0054ad;">D/o Smt Chandra Prabha B V and Sri Sheshkumar S C</p> <br>
-          <p class="text-style-1" style="color: #007e21;">together with their families invite you to their wedding celebration.</p>
+          <p class="trans-color-2" style="margin-bottom: 0px; color:#00f7ff">S/o Smt Radha and Sri Kanthraj</p> <br>
+          <h1 class="trans-color-1" style="padding-top: 2px; padding-bottom: 2px;" >.・❀・.</h1> <br>
+          <h1 class="emboss glow" style="margin-top: -10px;">Darshan K</h1><br>
+          <h1 class="emboss glow">&</h1><br>
+          <h1 class="emboss glow" style="margin-bottom: 0px;">Mithali S</h1><br>
+          <h1 class="trans-color-1" style="padding: 2px;">・. ❀ .・</h1><br>
+          <p class="trans-color-2" style="padding-top: 2px; padding-bottom: 2px; color:#00f7ff">D/o Smt Chandra Prabha B V and Sri Sheshkumar S C</p> <br>
+          <p class="trans-color-2" style="color: #ffffff;"> together with their families invite you to their <span class="trans-color-2 ;font-size: 200%;"> wedding celebration..!</span></p>
       </mat-card-content>
       <mat-card-actions>
       </mat-card-actions>
@@ -18,11 +18,10 @@
   
   <mat-card class="example-card">
       <div class="text-style-2">
-        <h1 class="text-style-1" style="color: #D43790">⋆༺𓆩 Reception 𓆪༻⋆</h1>
+        <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Reception ༻⋆</h1>
       </div>
-      <mat-divider></mat-divider>
       <mat-card-content style="text-align: center;">
-          <p class="text-style-1" style="color:#0054ad">27.03.2024, Wednesday 6:30 pm onwards</p>
+          <p class="trans-color-2">27.03.2024, Wednesday 6:30 pm onwards</p>
       </mat-card-content>
       <mat-card-actions>
       </mat-card-actions>
@@ -31,11 +30,10 @@
   
   <mat-card class="example-card">
     <div class="text-style-2">
-      <h1 class="text-style-1" style="color: #D43790">⋆༺𓆩 Muhurtham 𓆪༻⋆</h1>
+      <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Muhurtham ༻⋆</h1>
     </div>
-    <mat-divider></mat-divider>
     <mat-card-content style="text-align: center;">
-        <p class="text-style-1" style="color: #0054ad;">28.03.2024, Thursday 10:58 am to 11:10 am</p>
+        <p class="trans-color-2" >28.03.2024, Thursday 10:58 am to 11:10 am</p>
     </mat-card-content>
     <mat-card-actions>
     </mat-card-actions>
@@ -43,12 +41,11 @@
   
   <mat-card class="example-card">
     <div class="text-style-2">
-      <h1 class="text-style-1" style="color: #D43790">⋆༺𓆩 Location 𓆪༻⋆</h1>
+      <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Location ༻⋆</h1>
     </div>
-    <mat-divider></mat-divider>
     <mat-card-content style="text-align: center;">
-        <p class="text-style-1" style="color: #0054ad">Kalanivasthi, K G Lakkenhalli, Lakshmipura post, Dasanpura hobli, Bengaluru, Karnataka - 562162</p>
-        <a mat-raised-button style="background-color:#D43790" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank">Click here for Location</a>
+        <p class="trans-color-2">Kalanivasthi, K G Lakkenhalli, Lakshmipura post, Dasanpura hobli, Bengaluru, Karnataka - 562162</p>
+        <a mat-raised-button style=" background-image: linear-gradient(81.02deg, #fa5560 -23.47%, #b14bf4 45.52%);" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank">Click here for Location</a>
     </mat-card-content>
     <mat-card-actions>
     </mat-card-actions>
