--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -1,20 +1,20 @@
 <mat-card class="example-card">
     <div class="text-style-2">
-        <h1 class="text-style-1" style="color:#0054ad">⋆༺𓆩 Venue 𓆪༻⋆</h1>
+        <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Venue ༻⋆</h1>
     </div>
     <mat-card-header>
     </mat-card-header>
     <img mat-card-image>
     <mat-card-content style="text-align: center;">
-        <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">.・❀・.</h1> <br>
-        <h1 class="emboss" style="margin-bottom: 0px; color:#D43790">Kalanivasthi</h1> <br>
-        <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">・. ❀ .・</h1> <br>
+        <h1 class="trans-color-1" style="margin-bottom: 0px;">.・❀・.</h1> <br>
+        <h1 class="emboss" style="margin-bottom: 0px;">Kalanivasthi</h1> <br>
+        <h1 class="trans-color-1" style="margin-bottom: 0px;">・. ❀ .・</h1> <br>
     </mat-card-content>
     <div style="text-align: center;">
-        <p class="text-style-1" style="color: orangered;">
+        <p class="trans-color-2">
             K G Lakkenhalli, Lakshmipura post, Dasanpura hobli, Bengaluru, Karnataka - 562162
         </p>
-        <a mat-raised-button style="background-color:#D43790" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank">Click here for Location</a>
+        <a mat-raised-button style=" background-image: linear-gradient(81.02deg, #fa5560 -23.47%, #b14bf4 45.52%);" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank">Click here for Location</a>
     </div>
     <mat-card-actions>
     </mat-card-actions>
@@ -22,42 +22,42 @@
 
 <mat-card class="example-card">
     <mat-card-content style="text-align: center;">
-        <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">༺❀༻</h1> <br>
+        <h1 class="trans-color-1" style="margin-bottom: 0px;">༺❀༻</h1> <br>
         <img mat-card-image src="assets/klnc-1.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image"> 
     </mat-card-content>   
 </mat-card>
 
 <mat-card class="example-card">
     <mat-card-content style="text-align: center;">
-        <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">༺❀༻</h1> <br>
+        <h1 class="trans-color-1" style="margin-bottom: 0px;">༺❀༻</h1> <br>
         <img mat-card-image src="assets/klnc-2.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image"> 
     </mat-card-content>   
 </mat-card>
 
 <mat-card class="example-card">
     <mat-card-content style="text-align: center;">
-        <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">༺❀༻</h1> <br>
+        <h1 class="trans-color-1" style="margin-bottom: 0px;">༺❀༻</h1> <br>
         <img mat-card-image src="assets/klnc-3.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image"> 
     </mat-card-content>   
 </mat-card>
 
 <mat-card class="example-card">
     <mat-card-content style="text-align: center;">
-        <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">༺❀༻</h1> <br>
+        <h1 class="trans-color-1" style="margin-bottom: 0px;">༺❀༻</h1> <br>
         <img mat-card-image src="assets/klnc-4.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image"> 
     </mat-card-content>   
 </mat-card>
 
 <mat-card class="example-card">
     <mat-card-content style="text-align: center;">
-        <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">༺❀༻</h1> <br>
+        <h1 class="trans-color-1" style="margin-bottom: 0px;">༺❀༻</h1> <br>
         <img mat-card-image src="assets/klnc-5.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image"> 
     </mat-card-content>   
 </mat-card>
 
 <mat-card class="example-card">
     <mat-card-content style="text-align: center;">
-        <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">༺❀༻</h1> <br>
+        <h1 class="trans-color-1" style="margin-bottom: 0px;">༺❀༻</h1> <br>
         <img mat-card-image src="assets/klnc-6.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image"> 
     </mat-card-content>   
 </mat-card>
