--- a/src/app/place/place.component.css
+++ b/src/app/place/place.component.css
@@ -1,6 +1,9 @@
 .example-card {
     margin-bottom: 15px;
-    background-color: #e0e5eb;
+    background-color: rgb(17, 17, 17);
+    text-align: center;
+    border-radius:20px;
+    backdrop-filter: blur(10px);
 }
   
 .example-header-image {
@@ -58,9 +61,49 @@
 }
 
 .emboss{
-    color: #D43790;
-    text-shadow: 0 -4px 3px rgba(255, 255, 255, 0.3), 0 3px 4px rgba(0, 0, 0, 0.2);
+    color: #ffffff;
     font-size: 300%;
     font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: bold;
+    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
 }
+
+
+/* ------------------------------------------------------------------------ */
+
+
+.trans-color-1{
+    background: #03001e;
+    font-size: 40px;
+    font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-weight: bold;
+    background-image: linear-gradient(to right, #f700ff, #ff00bb, #9900ff, #00e1ff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    }
+  
+    @media screen and(max-width: 768px) {
+      .trans-color{
+          font-size: 16vw;
+      }
+    }
+  
+    @media screen and(max-width: 480px) {
+      .trans-color{
+          font-size: 12vw;
+      }
+    }
+  
+    .trans-color-2{
+      background: #03001e;
+      font-size: 20px;
+      font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-weight: bold;
+      background-image: linear-gradient(to right,  #fb89ff, #ff80dd, #c267ff, #6ee5f9);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      padding: 0px;
+    }
+  
