--- a/src/app/vid/vid.component.css
+++ b/src/app/vid/vid.component.css
@@ -1,6 +1,9 @@
 .example-card {
     margin-bottom: 15px;
-    background-color: #e0e5eb;
+    background-color: rgb(17, 17, 17);
+    text-align: center;
+    border-radius:20px;
+    backdrop-filter: blur(10px);
   }
   
   .example-header-image {
@@ -64,5 +67,44 @@
     font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: bold;
   }
+
+  /* ------------------------------------------------------------------------ */
+
+
+  .trans-color-1{
+    background: #03001e;
+    font-size: 40px;
+    font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-weight: bold;
+    background-image: linear-gradient(to right, #f700ff, #ff00bb, #9900ff, #00e1ff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    }
+  
+    @media screen and(max-width: 768px) {
+      .trans-color{
+          font-size: 16vw;
+      }
+    }
+  
+    @media screen and(max-width: 480px) {
+      .trans-color{
+          font-size: 12vw;
+      }
+    }
+  
+    .trans-color-2{
+      background: #03001e;
+      font-size: 20px;
+      font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+      font-weight: bold;
+      background-image: linear-gradient(to right,  #fb89ff, #ff80dd, #c267ff, #6ee5f9);
+      -webkit-background-clip: text;
+      background-clip: text;
+      color: transparent;
+      padding: 0px;
+    }
+  
   
   
