--- a/src/app/vid/vid.component.html
+++ b/src/app/vid/vid.component.html
@@ -1,22 +1,22 @@
 <mat-card class="example-card">
     <div style="text-align: center;">
-      <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">༺❀༻</h1>
+      <h1 class="trans-color-1" style="margin-bottom: 0px;">༺❀༻</h1>
     </div>
     <img mat-card-image>
     <mat-card-content style="text-align: center;">
-      <h1 class="text-style-1" style="color: orangered;">
+      <h1 class="trans-color-2">
         "In the tapestry of our lives, your presence has woven threads of love, laughter, and friendship that have made our journey richer and more beautiful. It is with overflowing hearts that we invite you to stand beside us during our wedding, as we pledge our eternal love amidst the embrace of those who mean the world to us."
       </h1>
     </mat-card-content>
     <div  style="text-align: center;">
-      <h1 class="emboss" style="margin-bottom: 0px; color:#ff86cb">❁</h1>
+      <h1 class="trans-color-1" style="margin-bottom: 0px;">❁</h1>
     </div>
   </mat-card>
   
   <mat-card class="example-card">
     <mat-card-content style="text-align: center;">
-      <h1 class="text-style-1" style="color: #D43790;margin-top: 20%; margin-bottom: 20%;">
-        See you at the Wedding!!
+      <h1 class="trans-color-1" style="color: #ffffff;margin-top: 20%; margin-bottom: 20%; font-size: 150%;">
+        See you at the <span class="trans-color-2 ;font-size: 200%;">Wedding..!!</span>
       </h1>
     </mat-card-content>
   </mat-card>
