--- a/src/app/image/image.component.css
+++ b/src/app/image/image.component.css
@@ -1,6 +1,6 @@
 .example-card {
     margin-bottom: 15px;
-    background-color: rgb(17, 17, 17);
+    background-color: #393939;
     text-align: center;
     border-radius:20px;
     backdrop-filter: blur(10px);
