--- a/src/app/place/place.component.css
+++ b/src/app/place/place.component.css
@@ -1,6 +1,6 @@
 .example-card {
     margin-bottom: 15px;
-    background-color: rgb(17, 17, 17);
+    background-color: #393939;
     text-align: center;
     border-radius:20px;
     backdrop-filter: blur(10px);
@@ -65,7 +65,7 @@
     font-size: 300%;
     font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: bold;
-    text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+    text-shadow: 0 0 10px #fff, 0 0 5px #ff4da6, 0 0 10px #ff4da6, 0 0 15px #ff4da6, 0 0 20px #ff4da6, 0 0 25px #ff4da6, 0 0 30px #ff4da6;
 }
 
 
@@ -74,7 +74,7 @@
 
 .trans-color-1{
     background: #03001e;
-    font-size: 40px;
+    font-size: 30px;
     font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: bold;
     background-image: linear-gradient(to right, #f700ff, #ff00bb, #9900ff, #00e1ff);
