--- a/src/app/vid/vid.component.css
+++ b/src/app/vid/vid.component.css
@@ -1,6 +1,6 @@
 .example-card {
     margin-bottom: 15px;
-    background-color: rgb(17, 17, 17);
+    background-color: #393939;
     text-align: center;
     border-radius:20px;
     backdrop-filter: blur(10px);
@@ -73,7 +73,7 @@
 
   .trans-color-1{
     background: #03001e;
-    font-size: 40px;
+    font-size: 35px;
     font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Roboto, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-weight: bold;
     background-image: linear-gradient(to right, #f700ff, #ff00bb, #9900ff, #00e1ff);
