--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,10 @@
       <mat-card-content style="text-align: center;">
           <p class="trans-color-2" style="margin-bottom: 0px; color:#00f7ff">S/o Smt Radha and Sri Kanthraj</p> <br>
           <h1 class="trans-color-1" style="padding-top: 2px; padding-bottom: 2px;" >.・❀・.</h1> <br>
-          <h1 class="emboss" style="margin-top: -10px;">Darshan K</h1><br>
-          <h1 class="emboss">&</h1><br>
-          <h1 class="emboss" style="margin-bottom: 0px;">Mithali S</h1><br>
+          <mat-card-content style="text-align: center;">
+            <img mat-card-image src="assets/darshan.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-1">
+            <img mat-card-image src="assets/mithali.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-2">
+          </mat-card-content>
           <h1 class="trans-color-1" style="padding: 2px;">・. ❀ .・</h1><br>
           <p class="trans-color-2" style="margin-top: -20px; padding-bottom: 2px; color:#00f7ff">D/o Smt Chandra Prabha B V and Sri Sheshkumar S C</p> <br>
           <p class="trans-color-2" style="color: #ffffff;"> together with our families, we invite you to our <span class="trans-color-2 ;font-size: 200%;"> wedding celebration..!</span></p>
