--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,14 +3,14 @@
       <h1 style="color: orangered;">ॐ</h1>
     </div>
       <mat-card-content style="text-align: center;">
-          <p class="trans-color-2" style="margin-bottom: 0px; color:#00f7ff">S/o Smt Radha and Sri Kanthraj</p> <br>
+          <p class="trans-color-2" style="margin-bottom: 0px; color:#ffffff">S/o Smt Radha and Sri Kanthraj</p> <br>
           <mat-card-content style="text-align: center;">
             <img mat-card-image src="assets/darshan.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-1"> <br>
             <img mat-card-image src="assets/and.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-3"> <br>
             <img mat-card-image src="assets/mithali.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-2"> <br>
           </mat-card-content>
-          <p class="trans-color-2" style="margin-top: -20px; padding-bottom: 2px; color:#00f7ff">D/o Smt Chandra Prabha B V and Sri Sheshkumar S C</p> <br>
-          <p class="trans-color-2" style="color: #ffffff;"> together with our families, we invite you to our <span class="trans-color-2 ;font-size: 200%;"> wedding celebration..!</span></p>
+          <p class="trans-color-2" style="margin-top: -20px; padding-bottom: 2px; color:#ffffff">D/o Smt Chandra Prabha B V and Sri Sheshkumar S C</p> <br>
+          <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;"> together with our families, we invite you to our wedding celebration..!</p>
       </mat-card-content>
       <mat-card-actions>
       </mat-card-actions>
@@ -21,7 +21,7 @@
         <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Reception ༻⋆</h1>
       </div>
       <mat-card-content style="text-align: center;">
-          <p class="trans-color-2">27.03.2024, Wednesday 6:30 pm onwards</p>
+          <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">27.03.2024, Wednesday 6:30 pm onwards</p>
       </mat-card-content>
       <mat-card-actions>
       </mat-card-actions>
@@ -33,7 +33,7 @@
       <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Muhurtham ༻⋆</h1>
     </div>
     <mat-card-content style="text-align: center;">
-        <p class="trans-color-2" >28.03.2024, Thursday 10:58 am to 11:10 am</p>
+        <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">28.03.2024, Thursday 10:58 am to 11:10 am</p>
     </mat-card-content>
     <mat-card-actions>
     </mat-card-actions>
@@ -44,8 +44,8 @@
       <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Location ༻⋆</h1>
     </div>
     <mat-card-content style="text-align: center;">
-        <p class="trans-color-2">Kalanivasthi, K G Lakkenhalli, Lakshmipura post, Dasanpura hobli, Bengaluru, Karnataka - 562162</p>
-        <a mat-raised-button style=" background-image: linear-gradient(81.02deg, #fa5560 -23.47%, #b14bf4 45.52%);" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank">Click here for Location</a>
+        <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">Kalanivasthi, K G Lakkenhalli, Lakshmipura post, Dasanpura hobli, Bengaluru, Karnataka - 562162</p>
+        <a mat-raised-button class="golden" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank">Click here for Location</a>
     </mat-card-content>
     <mat-card-actions>
     </mat-card-actions>
