--- a/src/app/vid/vid.component.html
+++ b/src/app/vid/vid.component.html
@@ -15,7 +15,7 @@
   
   <mat-card class="example-card">
     <mat-card-content style="text-align: center;">
-      <h1 class="trans-color-1" style="color: #ffffff;margin-top: 20%; margin-bottom: 20%; font-size: 150%;">
+      <h1 class="trans-color-1" style="color: #ffffff;margin-top: 20%; margin-bottom: 20%; font-size: 150%; font-family: 'comic sans MS', cursive, sans-serif;">
         See you at the <span class="trans-color-2 ;font-size: 200%;">Wedding..!!</span>
       </h1>
     </mat-card-content>
