--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <mat-sidenav-container style="background: #000000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to top, #000000, #550055);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to top, #030002, #000000); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+background: -webkit-linear-gradient(to top, #4d0ac9, #550055);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to top, #030002, #f7f0f0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 ;
                               background-attachment: fixed; 
                               background-size: cover;">
 
   <!-- The side nav -->
-	<mat-sidenav #drawer fixedInViewport="true" mode="over" opened="false" style="max-width: 20%; background-color: rgb(0, 0, 0);">
-		<mat-toolbar style="background-color: #000000">
+	<mat-sidenav #drawer fixedInViewport="true" mode="over" opened="false" style="max-width: 20%; background-color:#242424;">
+		<mat-toolbar style="background-color: #242424">
       <button
         type="button"
         aria-label="Toggle sidenav"
@@ -16,19 +16,19 @@ background: linear-gradient(to top, #030002, #000000); /* W3C, IE 10+/ Edge, Fir
         <mat-icon aria-label="Side nav toggle icon">close</mat-icon>
       </button>
     </mat-toolbar>
-		<mat-nav-list style="background-color: rgb(0, 0, 0); display: flex; flex-direction: column; align-items: center;">
-			<mat-list-item routerLink="/" style="color: #D43790">
+		<mat-nav-list style="background-color: #242424; display: flex; flex-direction: column; align-items: center;">
+			<mat-list-item routerLink="/" style="color: #ffffff">
         <button mat-icon-button (click)=drawer.toggle()>
           <mat-icon routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" ariaCurrentWhenActive="page">home</mat-icon>
         </button>
       </mat-list-item>
-      <mat-list-item routerLink="/image" style="color: #D43790;">
+      <mat-list-item routerLink="/image" style="color: #ffffff;">
         <button mat-icon-button (click)=drawer.toggle()><mat-icon routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" ariaCurrentWhenActive="page">image</mat-icon></button>
       </mat-list-item>
-      <mat-list-item routerLink="/place" style="color: #D43790;">
+      <mat-list-item routerLink="/place" style="color: #ffffff;">
         <button mat-icon-button (click)=drawer.toggle()><mat-icon routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" ariaCurrentWhenActive="page">place</mat-icon></button>
       </mat-list-item>
-      <mat-list-item routerLink="/vid" style="color: #D43790;">
+      <mat-list-item routerLink="/vid" style="color: #ffffff;">
         <button mat-icon-button (click)=drawer.toggle()><mat-icon routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" ariaCurrentWhenActive="page">card_giftcard</mat-icon></button>
       </mat-list-item>
       <mat-list-item></mat-list-item>
@@ -38,16 +38,14 @@ background: linear-gradient(to top, #030002, #000000); /* W3C, IE 10+/ Edge, Fir
 
 	<!-- Side nav content-->
 	<mat-sidenav-content>
-	<mat-toolbar class="position-fixed mat-elevation-z10" style= "background: #03001e;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #fdeff9, #ec38bc, #7303c0, #03001e);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #a300a8, #ec38bc, #7303c0, #0c0070); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  ">
+	<mat-toolbar class="position-fixed mat-elevation-z10" style= "background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
+  radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);">
       <button
         type="button"
         aria-label="Toggle sidenav"
         mat-icon-button
         (click)=drawer.toggle()>
-        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+        <mat-icon aria-label="Side nav toggle icon" style="color: #000000;">menu</mat-icon>
       </button>
       <span class="mat-spacer"></span>
       <span>Wedding Invitation</span>
