--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -5,7 +5,7 @@
         <img mat-card-image src="assets/bg-6.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image">
     </mat-card-content>
     <mat-card-actions style="text-align: center;">
-      <h1 class="trans-color-2">"Whispers of forever in every glance"</h1>
+      <h1 class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">"Whispers of forever in every glance"</h1>
     </mat-card-actions>
   </mat-card>
   
@@ -16,7 +16,7 @@
         <img mat-card-image src="assets/bg-3.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image">
     </mat-card-content>
     <mat-card-actions style="text-align: center;">
-      <h1 class="trans-color-2">"A quiet declaration amidst the beauty of togetherness"</h1>
+      <h1 class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">"A quiet declaration amidst the beauty of togetherness"</h1>
     </mat-card-actions>
   </mat-card>
   
@@ -27,7 +27,7 @@
         <img mat-card-image src="assets/bg-18.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image">
     </mat-card-content>
     <mat-card-actions style="text-align: center;">
-      <h1 class="trans-color-2">"Cherishing the quiet moments amidst the joyous chaos"</h1>
+      <h1 class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">"Cherishing the quiet moments amidst the joyous chaos"</h1>
     </mat-card-actions>
   </mat-card>
   
@@ -38,7 +38,7 @@
         <img mat-card-image src="assets/bg-2.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image">
     </mat-card-content>
     <mat-card-actions style="text-align: center;">
-      <h1 class="trans-color-2">"Capturing stolen glances and shared smiles"</h1>
+      <h1 class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">"Capturing stolen glances and shared smiles"</h1>
     </mat-card-actions>
   </mat-card>
   
@@ -49,7 +49,7 @@
         <img mat-card-image src="assets/bg-4.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image">
     </mat-card-content>
     <mat-card-actions style="text-align: center;">
-      <h1 class="trans-color-2">"A silent promise, a shared dream"</h1>
+      <h1 class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">"A silent promise, a shared dream"</h1>
     </mat-card-actions>
   </mat-card>
   
