--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -11,7 +11,7 @@
         <h1 class="trans-color-1" style="margin-bottom: 0px;">・. ❀ .・</h1> <br>
     </mat-card-content>
     <div style="text-align: center;">
-        <p class="trans-color-2">
+        <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">
             K G Lakkenhalli, Lakshmipura post, Dasanpura hobli, Bengaluru, Karnataka - 562162
         </p>
         <a mat-raised-button class="golden" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank">Click here for Location</a>
