--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
-<mat-sidenav-container style="background: #000000;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to top, #4d0ac9, #550055);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to top, #030002, #f7f0f0); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+<mat-sidenav-container style="background: linear-gradient(to bottom,white,  black);;
 ;
                               background-attachment: fixed; 
                               background-size: cover;">
