--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,13 +3,13 @@
       <h1 style="color: orangered;">ॐ</h1>
     </div>
       <mat-card-content style="text-align: center;">
-          <p class="trans-color-2" style="margin-bottom: 0px; color:#ffffff">S/o Smt Radha and Sri Kanthraj</p> <br>
+          <p class="trans-color-2" style="margin-bottom: 0px; color:#ffffff">D/o Smt <span style="color: goldenrod;">Chandra Prabha B V</span> and Sri <span style="color: goldenrod;">Sheshkumar S C</span></p> <br>
           <mat-card-content style="text-align: center;">
-            <img mat-card-image src="assets/darshan.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-1"> <br>
-            <img mat-card-image src="assets/and.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-3"> <br>
             <img mat-card-image src="assets/mithali.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-2"> <br>
+            <img mat-card-image src="assets/and.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-3"> <br>
+            <img mat-card-image src="assets/darshan.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image-1"> <br>
           </mat-card-content>
-          <p class="trans-color-2" style="margin-top: -20px; padding-bottom: 2px; color:#ffffff">D/o Smt Chandra Prabha B V and Sri Sheshkumar S C</p> <br>
+          <p class="trans-color-2" style="margin-top: -20px; padding-bottom: 2px; color:#ffffff">S/o Smt <span style="color: goldenrod;">Radha</span> and Sri<span style="color: goldenrod;"> Kanthraj</span></p> <br>
           <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;"> together with our families, we invite you to our wedding celebration..!</p>
       </mat-card-content>
       <mat-card-actions>
