--- a/src/app/image/image.component.css
+++ b/src/app/image/image.component.css
@@ -99,10 +99,11 @@
         background: #03001e;
         font-size: 20px;
         background-image: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #ffd780 30%, #f9c54e 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #ffb100 62.5%, #ffb100 100%);
+        -webkit-background-clip: text;
         background-clip: text;
         color: transparent;
         padding: 0px;
-      }
+    }
     
       .golden{
         background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
