--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -27,7 +27,7 @@
         <img mat-card-image src="assets/bg-18.jpg" alt="Description of the image" title="Additional information or tooltip" class="responsive-image">
     </mat-card-content>
     <mat-card-actions style="text-align: center;">
-      <h1 class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">"Cherishing the quiet moments amidst the joyous chaos"</h1>
+      <h1 class="trans-color-2" style="font-family: 'comic sans MS', cursive, Brush Script MT;">"Cherishing the quiet moments amidst the joyous chaos"</h1>
     </mat-card-actions>
   </mat-card>
   
