--- a/src/app/place/place.component.css
+++ b/src/app/place/place.component.css
@@ -1,6 +1,6 @@
 .example-card {
     margin-bottom: 15px;
-    background-color: #242424;
+    background-color: #110118;
     text-align: center;
     border-radius:20px;
     backdrop-filter: blur(10px);
@@ -102,9 +102,11 @@
         background-clip: text;
         color: transparent;
         padding: 10px;
+        font-weight: bold;
       }
     
       .golden{
-        background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #9f7928 30%, #8A6E2F 40%, transparent 80%),
-                    radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #5d4a1f 62.5%, #5d4a1f 100%);
+        background: radial-gradient(ellipse farthest-corner at right bottom, #FEDB37 0%, #FDB931 8%, #ffd780 30%, #f9c54e 40%, transparent 80%), radial-gradient(ellipse farthest-corner at left top, #FFFFFF 0%, #FFFFAC 8%, #D1B464 25%, #ffb100 62.5%, #ffb100 100%);
+        color: #110118;
+        font-weight: bold;
       }
