--- a/src/app/vid/vid.component.css
+++ b/src/app/vid/vid.component.css
@@ -1,6 +1,6 @@
 .example-card {
     margin-bottom: 15px;
-    background-color: #242424;
+    background-color: #110118;
     text-align: center;
     border-radius:20px;
     backdrop-filter: blur(10px);
@@ -104,6 +104,7 @@
       background-clip: text;
       color: transparent;
       padding: 0px;
+      font-weight: bold;
     }
   
     .golden{
