added image uploader

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,7 +19,7 @@
         </button>
       </mat-list-item>
       <mat-list-item routerLink="/image" style="color: #ffffff;">
-        <button mat-icon-button (click)=drawer.toggle()><mat-icon routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" ariaCurrentWhenActive="page">image</mat-icon></button>
+        <button mat-icon-button (click)=drawer.toggle()><mat-icon routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" ariaCurrentWhenActive="page">collections</mat-icon></button>
       </mat-list-item>
       <mat-list-item routerLink="/place" style="color: #ffffff;">
         <button mat-icon-button (click)=drawer.toggle()><mat-icon routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" ariaCurrentWhenActive="page">place</mat-icon></button>
