--- a/src/app/image/image.component.html
+++ b/src/app/image/image.component.html
@@ -1,3 +1,16 @@
+
+<mat-card class="example-card">
+  <div class="text-style-2">
+    <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Cherished Memories ༻⋆</h1>
+  </div>
+  <mat-card-content style="text-align: center;">
+      <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;"></p>
+      <a mat-raised-button class="golden" href="https://drive.google.com/drive/folders/1GQfevS4YhnAIFsF9BAfVuBUiGO8kwq_v" target="_blank"> <mat-icon> cloud_upload </mat-icon> Click here to upload</a>
+  </mat-card-content>
+  <mat-card-actions>
+  </mat-card-actions>
+</mat-card>
+
 <mat-card class="example-card">
 
     <img mat-card-image>
