--- a/src/app/place/place.component.html
+++ b/src/app/place/place.component.html
@@ -14,7 +14,7 @@
         <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">
             K G Lakkenhalli, Lakshmipura post, Dasanpura hobli, Bengaluru, Karnataka - 562162
         </p>
-        <a mat-raised-button class="golden" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank">Click here for Location</a>
+        <a mat-raised-button class="golden" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank"><mat-icon> place </mat-icon>Click here for Location</a>
     </div>
     <mat-card-actions>
     </mat-card-actions>
