--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -45,7 +45,19 @@
     </div>
     <mat-card-content style="text-align: center;">
         <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">Kalanivasthi, K G Lakkenhalli, Lakshmipura post, Dasanpura hobli, Bengaluru, Karnataka - 562162</p>
-        <a mat-raised-button class="golden" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank">Click here for Location</a>
+        <a mat-raised-button class="golden" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank"> <mat-icon> place </mat-icon> Click here for Location</a>
+    </mat-card-content>
+    <mat-card-actions>
+    </mat-card-actions>
+  </mat-card>
+
+  <mat-card class="example-card">
+    <div class="text-style-2">
+      <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Cherished Memories ༻⋆</h1>
+    </div>
+    <mat-card-content style="text-align: center;">
+        <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">We would be honored if you could share your cherished moments from our special day by uploading your beautiful wedding images to our dedicated online gallery. Your contributions will help preserve the magic of this joyous occasion for years to come.</p>
+        <a mat-raised-button class="golden" href="https://drive.google.com/drive/folders/1GQfevS4YhnAIFsF9BAfVuBUiGO8kwq_v" target="_blank"> <mat-icon> cloud_upload </mat-icon> Click here to upload</a>
     </mat-card-content>
     <mat-card-actions>
     </mat-card-actions>
