--- a/src/app/vid/vid.component.html
+++ b/src/app/vid/vid.component.html
@@ -20,4 +20,16 @@
       </h1>
     </mat-card-content>
   </mat-card>
+
+  <mat-card class="example-card">
+    <div class="text-style-2">
+      <h1 class="trans-color-2" style="color: #ffffff;">⋆༺ Location ༻⋆</h1>
+    </div>
+    <mat-card-content style="text-align: center;">
+        <p class="trans-color-2" style="font-family: 'comic sans MS', cursive, sans-serif;">Kalanivasthi, K G Lakkenhalli, Lakshmipura post, Dasanpura hobli, Bengaluru, Karnataka - 562162</p>
+        <a mat-raised-button class="golden" href="https://maps.app.goo.gl/inGJDtDHTKo3QiBQ9" target="_blank"> <mat-icon> place </mat-icon> Click here for Location</a>
+    </mat-card-content>
+    <mat-card-actions>
+    </mat-card-actions>
+  </mat-card>
   
