--- a/src/app/vid/vid.component.css
+++ b/src/app/vid/vid.component.css
@@ -1,7 +1,6 @@
 .example-card {
     margin-bottom: 15px;
-    background-color: #110118;
-    text-align: center;
+    background-image: linear-gradient(61.02deg, #003c55 -23.47%, #300051 45.52%);
     border-radius:20px;
     backdrop-filter: blur(10px);
     border: 2px solid goldenrod;
